# miso-ui

./: .ghci  .gitignore  Makefile  README.md  app.cabal  cabal.project  flake.nix  miso-ui.cabal
app/: Main.hs
app/pages/: Accordion.hs  Alert.hs  Installation.hs  Introduction.hs  KitchenSink.hs  Types.hs
assets/: styles.css
client/: Main.hs
js/: util.js
lib/Miso/: UI.hs
lib/Miso/UI/: Accordion.hs  Alert.hs  AlertDialog.hs  Avatar.hs  Badge.hs  CommandMenu.hs  Dialog.hs  DropDownMenu.hs  Form.hs  Input.hs  Pagination.hs  Popover.hs  Select.hs  Skeleton.hs  Tabs.hs  Textarea.hs  Tooltip.hs
server/: Main.hs
shared/: Client.hs  KitchenSink.hs  KitchenSink.hs.bak  Types.hs
src/Miso/UI/: Accordion.hs  Alert.hs  AlertDialog.hs  Avatar.hs  Badge.hs  Breadcrumb.hs  Button.hs  Card.hs  Checkbox.hs  Combobox.hs  CommandMenu.hs  Dialog.hs  Input.hs  Label.hs  Popover.hs  RadioGroup.hs  Select.hs  Sidebar.hs  Skeleton.hs  Slider.hs  Switch.hs  Table.hs  Tabs.hs  Textarea.hs  ThemeSwitcher.hs  Toast.hs  Tooltip.hs
static/: index.html
