cabal-version:      3.0
name:               miso-ui
version:            0.1.0.0
synopsis:           Miso integration with basecoatcss.ui
description:        Use Tailwind + ShadCN styles w/ miso via basecoatcss.ui
license:            BSD-3-Clause
license-file:       LICENSE
author:             dmjio
maintainer:         code@dmj.io
copyright:          haskell-miso @ 2025
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common options
  ghc-options:
    -funbox-strict-fields -O2 -ferror-spans -fspecialise-aggressively -Wall

common wasm
  if arch(wasm32)
    ghc-options:
      -no-hs-main -optl-mexec-model=reactor "-optl-Wl,--export=hs_start"
    cpp-options:
      -DWASM

executable app
  import:
    wasm, options
  main-is:
    Main.hs
  build-depends:
    base < 5, miso, miso-ui, jsaddle
  hs-source-dirs:
    app, app/pages
  other-modules:
    Introduction
  default-language:
    Haskell2010

library
  import:
    options
  default-language:
    Haskell2010
  ghc-options:
    -Wall
  hs-source-dirs:
    src
  build-depends:
    base < 5, miso, jsaddle
  exposed-modules:
    Miso.UI
    Miso.UI.Accordion
    Miso.UI.Alert
    Miso.UI.AlertDialog
    Miso.UI.Avatar
    Miso.UI.Badge
    Miso.UI.Breadcrumb
    Miso.UI.Button
    Miso.UI.Card
    Miso.UI.Checkbox
    Miso.UI.Combobox
    Miso.UI.Dialog
    Miso.UI.DropDownMenu
    Miso.UI.Form
    Miso.UI.Input
    Miso.UI.Label
    Miso.UI.Pagination
    Miso.UI.Popover
    Miso.UI.RadioGroup
    Miso.UI.Select
    Miso.UI.Skeleton
    Miso.UI.Sidebar
    Miso.UI.Slider
    Miso.UI.Switch
    Miso.UI.Table
    Miso.UI.Tabs
    Miso.UI.Textarea
    Miso.UI.ThemeSwitcher
    Miso.UI.Toast
    Miso.UI.Tooltip
